--- a/index.html
+++ b/index.html
@@ -8,55 +8,69 @@
 </head>
 <body>
     <header>
-        <div class="container"></div>
-        <div class="burger">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="container">
+            <div class="navigation">
+                <div class="main__nav">
+                    <div class="logo">
+                        <h2>Lando</h2>
+                    </div>
+                    <nav class="navbar__item">
+                        <ul class="nav__list">
+                            <li class="nav__item  "><a class="current" href="">Home</a></li>
+                            <li class="nav__item"><a href="">Pricing</a></li>
+                            <li class="nav__item"><a href="">About us</a></li>
+                            <li class="nav__item"><a href="">Contact us</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="navbar__item">
+                    <ul class="nav__btns">
+                        <li><a href="">Log in</a></li>
+                        <li><a class="navbar__signup__btn"  href="">Sign up</a></li>
+                    </ul>
+                </div>
+                <div class="burger">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+ 
         </div>
-        <div class="logo">
-            <h2>Lando</h2>
-        </div>
-        <nav class="navigation">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="">Home</a></li>
-                <li class="nav__item"><a href="">Pricing</a></li>
-                <li class="nav__item"><a href="">About us</a></li>
-                <li class="nav__item"><a href="">Contact us</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="">Log in</a></li>
-            <li><a href="">Sign up</a></li>
-        </ul>
     </header>
 
     <main> 
         <section class="hero">
             <div class="container">
-                <div>
+                <div class="">
                     <div class="hero__description">
-                            <div class="hero__text">
-                                <p>-Free 30 day Trial</p>
-                                <h1>The Best way to showcase your projects</h1>
-                                <p>Here you can put a short</p>
-                                <a  class="try btn" href="">Try for free</a>
-                                <a href="">See How it works</a>
+                        <div class="hero__text">
+                            <p>-Free 30 day Trial</p>
+                            <h1>The Best way <br>  to showcase <br> your <span>projects</span></h1>
+                            <p>Here you can put a short description about your project</p>
+                            <div>
+                                <a  class="try__btn" href="">Try for free</a>
+                                <a  class="how__it__works__btn"  href="">See How it works</a>
                             </div>
+                        </div>
                     </div>
                         <div class="hero__image">
-                            <img src="img/undraw_presentation_re_sxof.svg" alt="">
+                            <img src="img/undraw_our_solution_re_8yk6.svg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="companies">
-                    <p>Trusted by and teams at the world's best companies</p>
-                    <ul class="companies__list">
-                        <li class="company__list__item"><a href=""></a></li>
-                        <li class="company__list__item"><a href=""></a></li>
-                        <li class="company__list__item"><a href=""></a></li>
-                        <li class="company__list__item"><a href=""></a></li>
-                    </ul>
+                    <div class="container">
+                        <p>Trusted by and teams at the world's best companies</p>
+                        <ul class="companies__list">
+                            <li class="company__list__item"><ion-icon name="logo-wordpress"></ion-icon></li>
+                            <li class="company__list__item"><ion-icon name="logo-web-component"></ion-icon></li>
+                            <li class="company__list__item"><ion-icon name="logo-apple"></ion-icon></li>
+                            <li class="company__list__item"><ion-icon name="logo-tux"></ion-icon></li>
+                            <li class="company__list__item"><ion-icon name="logo-google"></ion-icon></li>
+                            <li class="company__list__item"><ion-icon name="logo-paypal"></ion-icon></li>
+                        </ul>
+                    </div>
                 </div>
         </section>
         <section class="intro">
@@ -64,10 +78,10 @@
                 <div class="intro__description">
                     <h1>Introcting Good Solutions</h1>
                     <p>Join our community and experience the benefits today!</p>
-                    <a class="try btn" href="">Try for -Free</a>
+                    <a class="try__btn" href="">Try for -Free</a>
                 </div>
                 <div class="intro__image">
-                    <img src="img/" alt="">
+                    <img src="img/undraw_going_offline_ihag (1).svg" alt="">
                 </div>
             </div>
         </section>
@@ -107,7 +121,6 @@
                     <p>Just three simple steps to optimize your  company operations</p>
                     <a href="">Sign up Now</a>
                 </div>
-            </div>
             <div class="steps">
                 <div class="step">
                     <h1>Step 1</h1>
