--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="navbar__item">
+                <div class="navbar__item ">
                     <ul class="nav__btns">
                         <li><a href="">Log in</a></li>
                         <li><a class="navbar__signup__btn"  href="">Sign up</a></li>
@@ -40,119 +40,125 @@
     </header>
 
     <main> 
-        <section class="hero">
+        <section class="">
             <div class="container">
-                <div class="">
+                <div class="hero">
                     <div class="hero__description">
                         <div class="hero__text">
                             <p>-Free 30 day Trial</p>
-                            <h1>The Best way <br>  to showcase <br> your <span>projects</span></h1>
+                            <h1>The Best way to showcase your <span>projects</span></h1>
                             <p>Here you can put a short description about your project</p>
                             <div>
-                                <a  class="try__btn" href="">Try for free</a>
+                                <a  class="try__free__btn" href="">Try for free</a>
                                 <a  class="how__it__works__btn"  href="">See How it works</a>
                             </div>
                         </div>
                     </div>
-                        <div class="hero__image">
+                        <div class="ilustration">
                             <img src="img/undraw_our_solution_re_8yk6.svg" alt="">
                         </div>
                     </div>
-                </div>
-                <div class="companies">
-                    <div class="container">
-                        <p>Trusted by and teams at the world's best companies</p>
-                        <ul class="companies__list">
-                            <li class="company__list__item"><ion-icon name="logo-wordpress"></ion-icon></li>
-                            <li class="company__list__item"><ion-icon name="logo-web-component"></ion-icon></li>
-                            <li class="company__list__item"><ion-icon name="logo-apple"></ion-icon></li>
-                            <li class="company__list__item"><ion-icon name="logo-tux"></ion-icon></li>
-                            <li class="company__list__item"><ion-icon name="logo-google"></ion-icon></li>
-                            <li class="company__list__item"><ion-icon name="logo-paypal"></ion-icon></li>
-                        </ul>
-                    </div>
-                </div>
+            </div>
         </section>
-        <section class="intro">
-            <div class="container">
-                <div class="intro__description">
-                    <h1>Introcting Good Solutions</h1>
-                    <p>Join our community and experience the benefits today!</p>
-                    <a class="try__btn" href="">Try for -Free</a>
+
+        <section>
+            <div class="companies">
+                <div class="container">
+                    <p>Trusted by and teams at the world's best companies</p>
+                    <ul class="companies__list">
+                        <li class="company__list__item"><ion-icon name="logo-wordpress"></ion-icon></li>
+                        <li class="company__list__item"><ion-icon name="logo-web-component"></ion-icon></li>
+                        <li class="company__list__item"><ion-icon name="logo-apple"></ion-icon></li>
+                        <li class="company__list__item"><ion-icon name="logo-tux"></ion-icon></li>
+                        <li class="company__list__item"><ion-icon name="logo-google"></ion-icon></li>
+                        <li class="company__list__item"><ion-icon name="logo-paypal"></ion-icon></li>
+                    </ul>
                 </div>
-                <div class="intro__image">
-                    <img src="img/undraw_going_offline_ihag (1).svg" alt="">
+            </div>
+        </section>
+
+
+        <section>
+            <div class="container">
+                <div class="intro">
+                    <div class="intro__description">
+                        <h1>Introducing Good Solutions</h1>
+                        <p>Join our community and experience the benefits today!</p>
+                        <a class="try__free__btn" href="">Try for Free</a>
+                    </div>
+                    <div class="ilustration">
+                        <img src="img/undraw_going_offline_ihag (1).svg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="smartsave">
             <div class="container">
-                <div class="smarttest__description">
-                    <p>smartsave</p>
-                    <h1>All your work is safe with us</h1>
-                    <p>We take your data security seriusly, which is why we use advanced encritption protocols to protect your files in the cloud. your is safe and secure width us</p>
-                    <a class="" href="">Try Now</a>
-                </div>
-                <div>
-                    <img src="img/undraw_security_on_re_e491.svg" alt="">
+                <div class="smart__container">
+                    <div>
+                        <img class="security__img" src="img/undraw_security_on_re_e491.svg" alt="">
+                    </div>
+                    <div class="smarttest__description">
+                        <p>smartsave</p>
+                        <h1>All your work is safe with us</h1>
+                        <p>We take your data security seriusly, which is why we use advanced encritption protocols to protect your files in the cloud. your is safe and secure width us</p>
+                        <a class="try__now__btn" href="">Try Now</a>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="costsaver">
             <div class="container">
-                <div class="costsaver__descrition">
-                    <p>constsaver</p>
-                    <h1>const saving in smart way</h1>
-                    <p>powerful too that you  reduce costs and save money on your business operations. Whith advanced anlitics  and optization alrigothims, costsaver analyzes your existing workflows and identifies areas for improvements</p>
-                    <a class="" href="">Try Now</a>
-                </div>
-                <div>
-                    <img src="img/undraw_savings_re_eq4w.svg" alt="">
+                <div class="cost__container">
+                    <div class="costsaver__descrition">
+                        <p>constsaver</p>
+                        <h1>const saving in smart way</h1>
+                        <p>powerful too that you  reduce costs and save money on your business operations. Whith advanced anlitics  and optization alrigothims, costsaver analyzes your existing workflows and identifies areas for improvements</p>
+                        <a class="try__now__btn" href="">Try Now</a>
+                    </div>
+                    <div class="ilustration">
+                        <img src="img/undraw_savings_re_eq4w.svg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="join">
+        <section class="join__section">
             <div class="container">
-                <div class="join__description">
-                    <img src="img/undraw_community_re_cyrm.svg" alt="">
-                    <h1>How to join our community</h1>
-                    <p>Just three simple steps to optimize your  company operations</p>
-                    <a href="">Sign up Now</a>
-                </div>
-            <div class="steps">
-                <div class="step">
-                    <h1>Step 1</h1>
-                    <p>Reach out to one of our specialists, and have short introduction session</p>
-                </div>
-                <div class="step">
-                    <h1>Step 2</h1>
-                    <p>our specialists will prepare personalise package suitable for your needs</p>
-                </div>
-                <div class="step">
-                    <h1>Step 3</h1>
-                    <p>poof your ready to work smart with optimized operations</p>
+                <div class="join__container">
+                    <div class="join__description">
+                        <img src="img/undraw_join_re_w1lh.svg" alt="">
+                        <h1>How to join our community</h1>
+                        <p>Just three simple steps to optimize your  company operations</p>
+                        <a  class="signup__btn" href="">Sign up Now</a>
+                    </div>
+                    <div class="steps">
+
+                    <div class="step">
+                        <h1>Step 1</h1>
+                        <p>Reach out to one of our specialists, and have short introduction session</p>
+                    </div>
+
+                    <div class="step">
+                        <h1>Step 2</h1>
+                        <p>our specialists will prepare personalise package suitable for your needs</p>
+                    </div>
+
+                    <div class="step">
+                        <h1>Step 3</h1>
+                        <p>poof your ready to work smart with optimized operations</p>
+                    </div>
+
                 </div>
             </div>
         </section>
 
         <section class="testimonials">
-            <div class="container">
+            
+            <!-- <div class="container">
                 <div class="">
-                    <div class="step">
-                        <p>Reach out to one of our specialists, and have short introduction session</p>
-                        <ul class="star__list">
-                            <ion-icon name="star-outline"></ion-icon>
-                            <ion-icon name="star-outline"></ion-icon>
-                            <ion-icon name="star-outline"></ion-icon>
-                            <ion-icon name="star-outline"></ion-icon>
-                            <ion-icon name="star-outline"></ion-icon>
-                        </ul>
-                        <p>Andre Trosso</p>
-                        <p>Lead Maneger</p>
-                    </div>
-                    <div class="step">
+                    <div class="">
                         <img src="" alt="">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                         <ul class="star__list">
@@ -165,7 +171,20 @@
                         <p>Abel Katenda</p>
                         <p>Product Maneger</p>
                     </div>
-                    <div class="step">
+                    <div class="">
+                        <img src="" alt="">
+                        <p>Reach out to one of our specialists, and have short introduction session</p>
+                        <ul class="star__list">
+                            <ion-icon name="star-outline"></ion-icon>
+                            <ion-icon name="star-outline"></ion-icon>
+                            <ion-icon name="star-outline"></ion-icon>
+                            <ion-icon name="star-outline"></ion-icon>
+                            <ion-icon name="star-outline"></ion-icon>
+                        </ul>
+                        <p>Abel Katenda</p>
+                        <p>Product Maneger</p>
+                    </div>
+                    <div class="">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                         <ul class="star__list">
                             <ion-icon name="star-outline"></ion-icon>
@@ -178,15 +197,20 @@
                         <p>CTO</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
 
-        <section class="start">
+        <section class="">
             <div class="container">
-                <div class="start description">
-                    <h1>Get start with Lando Today</h1>
-                    <p>start optimizing your process today</p>
-                    <a href="">Sign up now</a>
+                <div class="start">
+                    <div class="ilustration">
+                        <img src="img/undraw_begin_chat_re_v0lw.svg" alt="">
+                    </div>
+                    <div class="start__description">
+                        <h1>Get start with Lando Today</h1>
+                        <p>start optimizing your process today</p>
+                        <a class="signup__btn" href="">Sign up now</a>
+                    </div>
                 </div>
             </div>
         </section>
