add testimonials sectiom

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="container">
                 <div class="intro">
                     <div class="intro__description">
-                        <h1>Introducing Good Solutions</h1>
+                        <h2>Introducing Good Solutions</h2>
                         <p>Join our community and experience the benefits today!</p>
                         <a class="try__free__btn" href="">Try for Free</a>
                     </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="smarttest__description">
                         <p>smartsave</p>
-                        <h1>All your work is safe with us</h1>
+                        <h2>All your work is safe with us</h2>
                         <p>We take your data security seriusly, which is why we use advanced encritption protocols to protect your files in the cloud. your is safe and secure width us</p>
                         <a class="try__now__btn" href="">Try Now</a>
                     </div>
@@ -114,7 +114,7 @@
                 <div class="cost__container">
                     <div class="costsaver__descrition">
                         <p>constsaver</p>
-                        <h1>const saving in smart way</h1>
+                        <h2>const saving in smart way</h2>
                         <p>powerful too that you  reduce costs and save money on your business operations. Whith advanced anlitics  and optization alrigothims, costsaver analyzes your existing workflows and identifies areas for improvements</p>
                         <a class="try__now__btn" href="">Try Now</a>
                     </div>
@@ -129,7 +129,7 @@
                 <div class="join__container">
                     <div class="join__description">
                         <img src="img/undraw_join_re_w1lh.svg" alt="">
-                        <h1>How to join our community</h1>
+                        <h2>How to join our community</h2>
                         <p>Just three simple steps to optimize your  company operations</p>
                         <a  class="signup__btn" href="">Sign up Now</a>
                     </div>
@@ -154,12 +154,12 @@
             </div>
         </section>
 
-        <section class="testimonials">
-            
-            <!-- <div class="container">
-                <div class="">
+        <section class="testimonials"> 
+            <div class="container">
+                <h2>testimonials</h2>
+                <p>People love what we do and want to let you know</p>
+                <div class="opinions">
                     <div class="">
-                        <img src="" alt="">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                         <ul class="star__list">
                             <ion-icon name="star-outline"></ion-icon>
@@ -169,10 +169,9 @@
                             <ion-icon name="star-outline"></ion-icon>
                         </ul>
                         <p>Abel Katenda</p>
-                        <p>Product Maneger</p>
+                        <p>Product maneger</p>
                     </div>
                     <div class="">
-                        <img src="" alt="">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                         <ul class="star__list">
                             <ion-icon name="star-outline"></ion-icon>
@@ -181,8 +180,8 @@
                             <ion-icon name="star-outline"></ion-icon>
                             <ion-icon name="star-outline"></ion-icon>
                         </ul>
-                        <p>Abel Katenda</p>
-                        <p>Product Maneger</p>
+                        <p>Nelson Patricio</p>
+                        <p>CTO</p>
                     </div>
                     <div class="">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
@@ -197,7 +196,7 @@
                         <p>CTO</p>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </section>
 
         <section class="">
@@ -207,7 +206,7 @@
                         <img src="img/undraw_begin_chat_re_v0lw.svg" alt="">
                     </div>
                     <div class="start__description">
-                        <h1>Get start with Lando Today</h1>
+                        <h2>Get start with Lando Today</h2>
                         <p>start optimizing your process today</p>
                         <a class="signup__btn" href="">Sign up now</a>
                     </div>
