some adjustments in the website itself

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="">
             <div class="container">
                 <div class="hero">
-                    <div class="hero__description">
+                    <div class="hero__ description">
                         <div class="hero__text">
                             <p>-Free 30 day Trial</p>
                             <h1>The Best way to showcase your <span>projects</span></h1>
@@ -81,8 +81,8 @@
         <section>
             <div class="container">
                 <div class="intro">
-                    <div class="intro__description">
-                        <h2>Introducing Good Solutions</h2>
+                    <div class="intro__text description">
+                        <h2>Introducing <br> Good Solutions</h2>
                         <p>Join our community and experience the benefits today!</p>
                         <a class="try__free__btn" href="">Try for Free</a>
                     </div>
@@ -99,7 +99,7 @@
                     <div>
                         <img class="security__img" src="img/undraw_security_on_re_e491.svg" alt="">
                     </div>
-                    <div class="smarttest__description">
+                    <div class="smarttest__ description">
                         <p>smartsave</p>
                         <h2>All your work is safe with us</h2>
                         <p>We take your data security seriusly, which is why we use advanced encritption protocols to protect your files in the cloud. your is safe and secure width us</p>
@@ -112,7 +112,7 @@
         <section class="costsaver">
             <div class="container">
                 <div class="cost__container">
-                    <div class="costsaver__descrition">
+                    <div class="costsaver__text description">
                         <p>constsaver</p>
                         <h2>const saving in smart way</h2>
                         <p>powerful too that you  reduce costs and save money on your business operations. Whith advanced anlitics  and optization alrigothims, costsaver analyzes your existing workflows and identifies areas for improvements</p>
@@ -216,26 +216,27 @@
     </main>
     <footer>
         <div class="container">
-            <div class="lando">
-                <h1>lando</h1>
-                <p><span>2021</span> &copy; all right reserved</p>
-            </div>
-            <ul class="footer__list">
-                <li class="nav__item"><a href="">Home</a></li>
-                <li class="nav__item"><a href="">Pricing</a></li>
-                <li class="nav__item"><a href="">About us</a></li>
-                <li class="nav__item"><a href="">Contact us</a></li>
-            </ul>
-
-            <ul class="media__list">
-                <li class="nav__item"><a href="">Facebook</a></li>
-                <li class="nav__item"><a href="">instagram</a></li>
-                <li class="nav__item"><a href="">twitter</a></li>
-                <li class="nav__item"><a href="">Linkedin</a></li>
-            </ul>
-            <div>
-                <li><a href="">privacy and polices</a></li>
-                <li><a href="">terms of services</a></li>
+            <div class="footer__container">
+                <div class="lando">
+                    <h1>lando</h1>
+                    <p><span>2021</span> &copy; all right reserved</p>
+                </div>
+                <ul class="footer__list">
+                    <li class="nav__item"><a href="">Home</a></li>
+                    <li class="nav__item"><a href="">Pricing</a></li>
+                    <li class="nav__item"><a href="">About us</a></li>
+                    <li class="nav__item"><a href="">Contact us</a></li>
+                </ul>
+                <ul class="media__list">
+                    <li class="nav__item"><a href="">Facebook</a></li>
+                    <li class="nav__item"><a href="">instagram</a></li>
+                    <li class="nav__item"><a href="">twitter</a></li>
+                    <li class="nav__item"><a href="">Linkedin</a></li>
+                </ul>
+                <div>
+                    <li><a href="">privacy and polices</a></li>
+                    <li><a href="">terms of services</a></li>
+                </div>
             </div>
         </div>
     </footer>
