--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <section class="">
             <div class="container">
                 <div class="hero">
-                    <div class="hero__ description">
                         <div class="hero__text">
                             <p>-Free 30 day Trial</p>
                             <h1>The Best way to showcase your <span>projects</span></h1>
@@ -53,7 +52,6 @@
                                 <a  class="how__it__works__btn"  href="">See How it works</a>
                             </div>
                         </div>
-                    </div>
                         <div class="ilustration">
                             <img src="img/undraw_our_solution_re_8yk6.svg" alt="">
                         </div>
@@ -82,12 +80,12 @@
             <div class="container">
                 <div class="intro">
                     <div class="intro__text description">
-                        <h2>Introducing <br> Good Solutions</h2>
+                        <h3>Introducing Good Solutions</h3>
                         <p>Join our community and experience the benefits today!</p>
                         <a class="try__free__btn" href="">Try for Free</a>
                     </div>
                     <div class="ilustration">
-                        <img src="img/undraw_going_offline_ihag (1).svg" alt="">
+                        <img  src="img/undraw_going_offline_ihag (1).svg" alt="">
                     </div>
                 </div>
             </div>
@@ -99,7 +97,7 @@
                     <div>
                         <img class="security__img" src="img/undraw_security_on_re_e491.svg" alt="">
                     </div>
-                    <div class="smarttest__ description">
+                    <div class="smarttest__description">
                         <p>smartsave</p>
                         <h2>All your work is safe with us</h2>
                         <p>We take your data security seriusly, which is why we use advanced encritption protocols to protect your files in the cloud. your is safe and secure width us</p>
@@ -206,7 +204,7 @@
                         <img src="img/undraw_begin_chat_re_v0lw.svg" alt="">
                     </div>
                     <div class="start__description">
-                        <h2>Get start with Lando Today</h2>
+                        <h3>Get start with Lando Today</h3>
                         <p>start optimizing your process today</p>
                         <a class="signup__btn" href="">Sign up now</a>
                     </div>
