changed the images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="ilustration">
-                            <img src="img/undraw_our_solution_re_8yk6.svg" alt="">
+                            <img src="img/undraw_online_stats_0g94.svg" alt="">
                         </div>
                     </div>
             </div>
@@ -85,7 +85,7 @@
                         <a class="try__free__btn" href="">Try for Free</a>
                     </div>
                     <div class="ilustration">
-                        <img  src="img/undraw_going_offline_ihag (1).svg" alt="">
+                        <img  src="img/undraw_code_thinking_re_gka2.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
             <div class="container">
                 <div class="join__container">
                     <div class="join__description">
-                        <img src="img/undraw_join_re_w1lh.svg" alt="">
+                        <img src="img/undraw_shared_workspace_re_3gsu.svg" alt="">
                         <h2>How to join our community</h2>
                         <p>Just three simple steps to optimize your  company operations</p>
                         <a  class="signup__btn" href="">Sign up Now</a>
@@ -134,17 +134,17 @@
                     <div class="steps">
 
                     <div class="step">
-                        <h1>Step 1</h1>
+                        <h3>Step 1</h3>
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                     </div>
 
                     <div class="step">
-                        <h1>Step 2</h1>
+                        <h3>Step 2</h3>
                         <p>our specialists will prepare personalise package suitable for your needs</p>
                     </div>
 
                     <div class="step">
-                        <h1>Step 3</h1>
+                        <h3>Step 3</h3>
                         <p>poof your ready to work smart with optimized operations</p>
                     </div>
 
@@ -157,7 +157,7 @@
                 <h2>testimonials</h2>
                 <p>People love what we do and want to let you know</p>
                 <div class="opinions">
-                    <div class="">
+                    <div class="opinion">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                         <ul class="star__list">
                             <ion-icon name="star-outline"></ion-icon>
@@ -169,7 +169,7 @@
                         <p>Abel Katenda</p>
                         <p>Product maneger</p>
                     </div>
-                    <div class="">
+                    <div class="opinion">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                         <ul class="star__list">
                             <ion-icon name="star-outline"></ion-icon>
@@ -178,10 +178,10 @@
                             <ion-icon name="star-outline"></ion-icon>
                             <ion-icon name="star-outline"></ion-icon>
                         </ul>
-                        <p>Nelson Patricio</p>
+                        <p>Andre Trosso</p>
                         <p>CTO</p>
                     </div>
-                    <div class="">
+                    <div class="opinion">
                         <p>Reach out to one of our specialists, and have short introduction session</p>
                         <ul class="star__list">
                             <ion-icon name="star-outline"></ion-icon>
@@ -201,11 +201,11 @@
             <div class="container">
                 <div class="start">
                     <div class="ilustration">
-                        <img src="img/undraw_begin_chat_re_v0lw.svg" alt="">
+                        <img src="img/undraw_quick_chat_re_bit5.svg" alt="">
                     </div>
                     <div class="start__description">
                         <h3>Get start with Lando Today</h3>
-                        <p>start optimizing your process today</p>
+                        <p>start optimizing your process today, what are you waiting?</p>
                         <a class="signup__btn" href="">Sign up now</a>
                     </div>
                 </div>
@@ -219,18 +219,18 @@
                     <h1>lando</h1>
                     <p><span>2021</span> &copy; all right reserved</p>
                 </div>
-                <ul class="footer__list">
+                <div class="footer__list">
                     <li class="nav__item"><a href="">Home</a></li>
                     <li class="nav__item"><a href="">Pricing</a></li>
                     <li class="nav__item"><a href="">About us</a></li>
                     <li class="nav__item"><a href="">Contact us</a></li>
-                </ul>
-                <ul class="media__list">
+                </div>
+                <div class="media__list">
                     <li class="nav__item"><a href="">Facebook</a></li>
                     <li class="nav__item"><a href="">instagram</a></li>
                     <li class="nav__item"><a href="">twitter</a></li>
                     <li class="nav__item"><a href="">Linkedin</a></li>
-                </ul>
+                </div>
                 <div>
                     <li><a href="">privacy and polices</a></li>
                     <li><a href="">terms of services</a></li>
