home page concluded

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <ion-icon name="star-outline"></ion-icon>
                             <ion-icon name="star-outline"></ion-icon>
                         </ul>
-                        <p>Abel Katenda</p>
+                        <h4>Abel Katenda</h4>
                         <p>Product maneger</p>
                     </div>
                     <div class="opinion">
@@ -178,7 +178,7 @@
                             <ion-icon name="star-outline"></ion-icon>
                             <ion-icon name="star-outline"></ion-icon>
                         </ul>
-                        <p>Andre Trosso</p>
+                        <h4>Andre Trosso</h4>
                         <p>CTO</p>
                     </div>
                     <div class="opinion">
@@ -190,7 +190,7 @@
                             <ion-icon name="star-outline"></ion-icon>
                             <ion-icon name="star-outline"></ion-icon>
                         </ul>
-                        <p>Nelson Patricio</p>
+                        <h4>Nelson Patricio</h4>
                         <p>CTO</p>
                     </div>
                 </div>
