--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <ul class="nav__list">
                             <li class="nav__item  "><a class="current" href="">Home</a></li>
                             <li class="nav__item"><a href="">Pricing</a></li>
-                            <li class="nav__item"><a href="">About us</a></li>
+                            <li class="nav__item"><a href="about.html">About us</a></li>
                             <li class="nav__item"><a href="">Contact us</a></li>
                         </ul>
                     </nav>
