about page html template completly added

--- a/about.html
+++ b/about.html
@@ -38,7 +38,77 @@
  
         </div>
     </header>
-    <main> 
+    <main>
+
+        <section class="aboutUs">
+            <div class="container">
+                <div>
+                    <h2>About us</h2>
+                    <p>We offer revolutionary solutin to industry problem. join lando community and experrience the benefits of company optimization today</p>
+                </div>
+                <img src="img/undraw_team_spirit_re_yl1v.svg" alt="">
+                <div>
+                    <h2>Our Mission</h2>
+                    <p>At lando we are commited to providing excellent services to our customers and clients and to help them achieve the best outcomes. we believe that we can make positive impact on our community, industry and the world. Our lando Team is dedicated to providing the best possible service and support, we are always looking for ways to improve and innovate.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="">
+            <div class="container">
+                <h2>Let's start working more efficiently today!</h2>
+                <img src="img/undraw_co-working_re_w93t.svg" alt="">
+            </div>
+        </section>
+
+        <section class="team">
+            <div class="container">
+                <h2>Team</h2>
+                <p>Meet the People behind our magical Product</p>
+                <div class="peaple">
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p>CEO</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="">
             <div class="container">
