--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                             <li class="nav__item"><a href="index.html">Home</a></li>
                             <li class="nav__item"><a href="">Pricing</a></li>
                             <li class="nav__item"><a class="current" href="about.html">About us</a></li>
-                            <li class="nav__item"><a href="">Contact us</a></li>
+                            <li class="nav__item"><a href="contactUs.html">Contact us</a></li>
                         </ul>
                     </nav>
                 </div>
