--- a/contactUs.html
+++ b/contactUs.html
@@ -42,17 +42,21 @@
     <main>
         <section class="contactUs">
             <div class="container">
-                <img src="img/undraw_contact_us_re_4qqt.svg" alt="">
-                <div>
+                <div class="contact__container">
+                    <div class="ilustration">
+                        <img src="img/undraw_real_time_collaboration_c62i.svg" alt=""></div>
                     <form action="">
-                        <h2>Contact Us</h2>
-                        <p>explore the future with us, feel free to get in touch</p>
+                        <div class="contact__description">
+                            <h2>Contact Us</h2>
+                            <p>explore the future with us, feel free to get in touch</p>
+                        </div>
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" placeholder="full Name">
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" placeholder="email address">
                         <label for="message">Message</label>
                         <textarea name="message" id="" cols="30" rows="5" placeholder="how can we get better"></textarea>
+                        <button class="send__message__btn">Send message</button>
                     </form>
                 </div>
             </div>
