--- a/about.html
+++ b/about.html
@@ -40,24 +40,28 @@
     </header>
     <main>
 
-        <section class="aboutUs">
+        <section class="about__us">
             <div class="container">
-                <div>
+                <div class="about__description">
                     <h2>About us</h2>
                     <p>We offer revolutionary solutin to industry problem. join lando community and experrience the benefits of company optimization today</p>
                 </div>
-                <img src="img/undraw_team_spirit_re_yl1v.svg" alt="">
-                <div>
+                <img class="ilustration" src="img/undraw_team_spirit_re_yl1v.svg" alt="">
+                <div class="mission__description">
                     <h2>Our Mission</h2>
                     <p>At lando we are commited to providing excellent services to our customers and clients and to help them achieve the best outcomes. we believe that we can make positive impact on our community, industry and the world. Our lando Team is dedicated to providing the best possible service and support, we are always looking for ways to improve and innovate.</p>
                 </div>
             </div>
         </section>
 
-        <section class="">
+        <section>
             <div class="container">
-                <h2>Let's start working more efficiently today!</h2>
-                <img src="img/undraw_co-working_re_w93t.svg" alt="">
+                <div class="work__invitation">
+                    <h1>Let's start working more efficiently today!</h1>
+                    <div class="ilustration">
+                        <img src="img/undraw_co-working_re_w93t.svg" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -65,46 +69,48 @@
             <div class="container">
                 <h2>Team</h2>
                 <p>Meet the People behind our magical Product</p>
-                <div class="peaple">
+                <div class="people">
+            
                     <div>
-                        <img src="" alt="">
+                        <img src="img/image-colton.jpg" alt="">
+                        <h4></h4>
+                        <p>Product manager</p>
+                    </div>
+
+                    <div>
+                        <img src="img/image-irene.jpg" alt="">
                         <h4></h4>
                         <p>CEO</p>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="img/image-anne.jpg" alt="">
                         <h4></h4>
-                        <p>CEO</p>
+                        <p>head of operations</p>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="img/image-colton.jpg" alt="">
                         <h4></h4>
-                        <p>CEO</p>
+                        <p>head of Product</p>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="img/image-irene.jpg" alt="">
                         <h4></h4>
-                        <p>CEO</p>
+                        <p>head of development</p>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="img/image-colton.jpg" alt="">
                         <h4></h4>
-                        <p>CEO</p>
+                        <p>tech support</p>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="img/image-irene.jpg" alt="">
                         <h4></h4>
-                        <p>CEO</p>
+                        <p>key account manager</p>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="img/image-irene.jpg" alt="">
                         <h4></h4>
-                        <p>CEO</p>
-                    </div>
-                    <div>
-                        <img src="" alt="">
-                        <h4></h4>
-                        <p>CEO</p>
+                        <p>plataform development</p>
                     </div>
                 </div>
             </div>
