--- a/contactUs.html
+++ b/contactUs.html
@@ -17,7 +17,7 @@
                     <nav class="navbar__item">
                         <ul class="nav__list">
                             <li class="nav__item"><a href="index.html">Home</a></li>
-                            <li class="nav__item"><a href="">Pricing</a></li>
+                            <li class="nav__item"><a href="princing.html">Pricing</a></li>
                             <li class="nav__item"><a href="about.html">About us</a></li>
                             <li class="nav__item"><a class="current" href="contactUs.html">Contact us</a></li>
                         </ul>
