--- a/princing.html
+++ b/princing.html
@@ -45,32 +45,34 @@
 
         <section class="">
             <div class="container">
-                <h2>princing</h2>
-                <p>our pricing is not expencive but it's not cheap either, it's exacly what it should be</p>
+                <div class="pricing__description">
+                    <h2>princing</h2>
+                    <p>Our pricing is not expencive but it's not cheap either, it's exacly what it should be</p>
+                </div>
                 <div class="pricing">
-                    <div class="pricing-tab">
+                    <div class="pricing__tab">
                         <ul>
-                            <li class="trigger active" data-target="#basic">basic</li>
+                            <li class="trigger active" data-target="#basic">Basic</li>
                             <li class="trigger" data-target="#Pro">Pro</li>
                             <li class="trigger" data-target="#business">Business</li>
-                          </ul>
-                          <div id="about" class="content active">
+                        </ul>
+                          <div id="about" class="content card active">
                             <h5>Basic</h5>
                             <p>$9/month</p>
                             <p>For individuals and small teams</p>
-                            <a href="">Get started with basic</a>
+                            <a class="card__btn" href="">Get started with basic</a>
                           </div>
-                          <div id="pro" class="content">
-                            <h5>Basic</h5>
-                            <p>$9/month</p>
+                          <div  id="pro" class="content card">
+                            <h5>Pro</h5>
+                            <p>$19/month</p>
                             <p>For individuals and small teams</p>
-                            <a href="">Get started with basic</a>
+                            <a class="card__btn href="">Get started with basic</a>
                           </div>
-                          <div id="business" class="content">
-                            <h5>Basic</h5>
-                            <p>$9/month</p>
+                          <div id="business" class="content card">
+                            <h5>Business</h5>
+                            <p>$99/month</p>
                             <p>For individuals and small teams</p>
-                            <a href="">Get started with basic</a>
+                            <a class="card__btn  href="">Get started with basic</a>
                           </div>
                     </div>
                     <div class="features">
@@ -98,7 +100,7 @@
         <section class="faq">
             <div class="container">
                 <img src="img/undraw_questions_re_1fy7.svg" alt="">
-                <h4>Frequently asked questions</h4>
+                <h3>Frequently asked questions</h3>
                 <div class="questions">
                     <div class="questions">
                         <h4>how does this work?</h4>
