added some style to questions section

--- a/princing.html
+++ b/princing.html
@@ -103,32 +103,53 @@
                 <h3>Frequently asked questions</h3>
                 <div class="questions">
                     <div class="questions">
-                        <h4>how does this work?</h4>
-                        <p></p>
+                        <li>
+                            <span>how does this work?</span>
+                            <ion-icon name="chevron-down-outline"></ion-icon>
+                        </li>
+                        <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
-                        <h4>what are the benefits?</h4>
-                        <p></p>
+                        <li>
+                            <span>what are the benefits?</span>
+                            <ion-icon name="chevron-down-outline"></ion-icon>
+                        </li>
+                        <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
-                        <h4>is it difficult to use?</h4>
-                        <p></p>
+                        <li>
+                            <span>is it difficult to use?</span>
+                            <ion-icon name="chevron-down-outline"></ion-icon>
+                        </li>
+                        <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
-                        <h4>Can I have custom pricing?</h4>
-                        <p></p>
+                        <li>
+                            <span>Can I have custom pricing?</span>
+                            <ion-icon name="chevron-down-outline"></ion-icon>
+                        </li>
+                        <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
-                        <h4>is the trial version available?</h4>
-                        <p></p>
+                        <li>
+                            <span>is the trial version available?</span>
+                            <ion-icon name="chevron-down-outline"></ion-icon>
+                        </li>
+                        <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
-                        <h4>how does this work</h4>
-                        <p></p>
+                        <li>
+                            <span>how does this work</span>
+                            <ion-icon name="chevron-down-outline"></ion-icon>
+                        </li>
+                        <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
-                        <h4>how do I sign up</h4>
-                        <p></p>
+                        <li>
+                            <span>how do I sign up</span>
+                            <ion-icon name="chevron-down-outline"></ion-icon>
+                        </li>
+                        <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                 </div>
             </div>
